--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
           <div class="w-100">
             <h3 class="">Contact</h3>
             <p class="lead mb-3 bold">email: <font color="green">
-                ramprasadk @ snuchennai . edu . in </font></p>
+                ram.krish @ saiuniversity . edu . in </font></p>
             <p class="lead mb-3 bold"> WhatsApp: <font color="green"> +91 73561 35445</font></p>
 
            
