--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
           <div class="subheading mb-3">            
             
           </div>
-          <h1 class="mb-2">Dr Ram Prasad K</h1>
-          <h3>Associate Professor</h3>
-          <h3>Sai University Chennai, India</h3>
+          <h1 class="mb-2">Dr Ram Prasad Krishnamoorthy</h1>
+          <h4>Associate Professor</h4>
+          <h4>School of Computing and Data Science</h4>
+          <h3>Sai University, Chennai, India</h3>
 
           <p> My research interest focus on the intersection between computer vision and machine learning.
             I received my Ph.D degree in Computer Science Engineering with distinction
