--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
             machine learning, deep learning, computer vision, biometrics, software developments
             and algorithm design. I was also the founder and director of VisionCog Research and
             Development Private Limited, India and manages commercial R&D works in the domain of
-            computer vision and biometrics.</p>
+            computer vision and biometrics. Currently, I am the Associate Dean for School of
+            Computing and Data Science at Sai University. I also lead the Biometrics and Pattern
+            Analysis Research Group. </p>
 
 
 
@@ -103,7 +105,7 @@
               <p>
               </p><ul>
 
-                <li> Data Structues and Algorithms (C and Python); [Jan-May 2024] </li>
+                <li> <a href="subpages/dsa.html"> Data Structues and Algorithms (C and Python); [Jan-May 2024] </li> </a>
                 <li> Machine Learning (Python); [Jan-May 2024] </li>
                 <li> Introduction to Programming (C and Julia); [Aug-Dec 2023]</li>
                 <li> Deep Learning (Python); [Aug-Dec 2023]</li>
