--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
             I was also the founder and director of VisionCog Research and Development Private Limited, India, where I managed commercial R&D projects in the fields of computer vision and biometrics. My expertise is in the areas of classical machine learning, deep learning, computer vision, biometrics, software development, and algorithm design.
 
             <br/><br/>
-            Currently, I am the Associate Dean for the School of Computing and Data Science at Sai University. I also lead the Biometrics and Pattern Analysis Research Group.
+            Currently, I am the Associate Dean for the School of Computing and Data Science at Sai University.
+            <!-- I also lead the Biometrics and Pattern Analysis Research Group. -->
 
           </p>
 
@@ -103,7 +104,7 @@
               </p><ul>
 
                 <li> Computer Vision (Python); [Aug-Dec 2025]</li>
-                <li> Deep Learning (Python); [Aug-Dec 2025]</li>                
+                <li> <a href="teaching/deeplearning25.html"> Deep Learning (Python); [Aug-Dec 2025]</li> </a>
              
               </ul>
               <p></p>
@@ -114,7 +115,7 @@
               </p><ul>
 
                 <li> Machine Learning (Python); [Jan-May 2025]]</li>
-                <li> Inreoduction to Data Structues(C and Python); [Jan-May 2025]</li>
+                <li> Introduction to Data Structues(C and Python); [Jan-May 2025]</li>
                 <li> Computer Vision (Python); [Aug-Dec 2024]</li>
                 <li> Deep Learning (Python); [Aug-Dec 2024]</li>                
              
